  o Added the 'fixstart' function that can aide in fixing startvalues
  o The 'getmatrix' function now supports thresholded PDC matrices
  o Diagnostic functions 'checkJacobian' and 'checkFischer' are now exported
  o Added the transmod function, which can be used to transform one model type (e.g., using a Cholesky decomposition) to another model type (e.g., a GGM).

Changes in Version 0.11.5
  o Fixes to support Matrix 1.7-0

Changes in Version 0.11.5
  o The groupequal, groupfree, fixpar and freepar functions can now handle multiple rows/columns for symmetric matrices
  o Fixed a bug in the identification function for ml_lvm models
  o Implemented min_sum argument for estimating Ising models on data with a minimum sum score due to selection bias. This method is further discussed in  Boot, de Ron, Haslbeck & Epskamp (in preperation). Correcting for selection bias after sum score selection in the Ising model.
  o The 'warn_improper' argument in runmodel now defaults to FALSE, omitting the warning that a non-positive defnite matrix was encountered in parameter estimation.
  o SEs are now set to NA if the Fischer information matrix could not be inverted normally
  o Added an argument 'approximate_SEs' to runmodel to allow for SEs to be approximated using a pseudoinverse

Changes in Version 0.11
  o Optimised lambda starting value choice
  o Changed warning for when a peusdoinverse was used in model estimation.
  o Added 'threshold' argument to the matrix(...) function for significance thresholding
  o Fixed a bug in psychonetrics:::emergencystart

Changes in Version 0.10.3
  o Added a 'bootstrap' argument to var1() family to facilitate bootstrapping the data
  o Fixed a bug where the saturated log-likelihood under FIML estimation could be incorrect

Changes in Version 0.10.2
  o Built in a check to find NA sample covs
  o added diag argument to getmatrix to obtain diagonal
  o diagonal elements are now also thresholded when using getmatrix(..., threshold = ...)
